# RMF-DDRMF

./: README.md
DDRMF-Y-D-K-phi/: plot.py
DDRMF-Y-D-K-phi/output/: EOS.sh  M_R.txt  Tid.sh  density.txt  parameter.txt  proton.sh  run  tov.py
DDRMF-Y-D-K-phi/scripts/: M_R.sh
DDRMF-Y-D-K-phi/src/: main.f90
DDRMF-Y-phi/: 2021-APJ.f90  CMakeLists.txt  plot.py
DDRMF-Y-phi/lib/gobal-constants/: gobal_constants.f90
DDRMF-Y-phi/lib/mean-field-theory/: MFT.f90
DDRMF-Y-phi/lib/model/: choose_module.f90
DDRMF-Y-phi/lib/tov/: TOV.f90
DDRMF-Y-phi/output/DDME1/: EOS.txt  M_R.txt  che.txt  density.txt  no_rot.py  parameter.txt
DDRMF-Y-phi/output/DDME1/1/: EOS.txt  M_R.txt  che.txt  density.txt  parameter.txt
DDRMF-Y-phi/output/DDME2/: EOS.txt  M_R.txt  che.txt  density.txt  parameter.txt
DDRMF-Y-phi/output/DDME2/1/: EOS.txt  M_R.txt  che.txt  parameter.txt
DDRMF-Y-phi/output/PKDD/: EOS.txt  M_R.txt  che.txt  density.txt  parameter.txt
DDRMF-Y-phi/output/PKDD/1/: EOS.txt  M_R.txt  che.txt  density.txt  parameter.txt
DDRMF-Y-phi/output/TD/: Tid_Def.py  未命名.ipynb
DDRMF-Y-phi/output/TW99/: EOS.txt  M_R.txt  che.txt  density.txt  parameter.txt
DDRMF-Y-phi/output/TW99/1/: EOS.txt  M_R.txt  che.txt  density.txt  parameter.txt
DDRMF-Y-phi/output/plot/: M_R.sh  Tid_Def.py  che.sh  proton.sh  tov.py
DDRMF-Y-phi/scripts/: EOS.sh  E_M.sh  proton.sh
DDRMF-Y-phi/src/: main.f90
RMF-Y/: 2021-APJ.f90  plot.py  setup.sh  tov.f90
RMF-Y-D-K-phi-cut/: hyperon.f90  plot.py
RMF-Y-D-K-phi-cut/output/: EOS.sh  M_R.sh  M_R.txt  density.txt  parameter.txt
(+260 files in other folders)
